--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 }
 
 body {
-    padding-top: 60px;
+    padding-top: 80px;
     font-family: 'Courier New', Courier, monospace;
     color: white;
     margin: 0;
